--- a/index.html
+++ b/index.html
@@ -2,44 +2,43 @@
 <html>
 <head>
   <title>Chat Room</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
   <style>
-    body { font-family: sans-serif; background: #f9f9f9; padding: 20px; }
-    #messages { list-style: none; padding: 0; }
-    #messages li { background: #eee; margin: 5px 0; padding: 10px; border-radius: 5px; }
-    #form { display: flex; margin-top: 20px; }
-    #input { flex: 1; padding: 10px; font-size: 16px; }
-    #send { padding: 10px; font-size: 16px; }
+    body { font-family: Arial; padding: 20px; }
+    #messages { border: 1px solid #ccc; height: 300px; overflow-y: scroll; padding: 10px; }
+    input { padding: 10px; width: 300px; }
   </style>
 </head>
 <body>
-  <h2>Chat Room 🗨️</h2>
-  <ul id="messages"></ul>
-  <form id="form">
-    <input id="input" autocomplete="off" placeholder="Type a message..." />
-    <button id="send">Send</button>
-  </form>
+  <h2>Simple Chat Room</h2>
+  <div id="messages"></div>
+  <input id="message" placeholder="Type your message..." autocomplete="off" />
+  <button onclick="sendMessage()">Send</button>
 
-  <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    const form = document.getElementById('form');
-    const input = document.getElementById('input');
-    const messages = document.getElementById('messages');
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      if (input.value) {
-        socket.emit('chat message', input.value);
-        input.value = '';
-      }
+    socket.on('message', function(msg) {
+      const messages = document.getElementById('messages');
+      const messageElement = document.createElement('div');
+      messageElement.innerText = msg;
+      messages.appendChild(messageElement);
+      messages.scrollTop = messages.scrollHeight;
     });
 
-    socket.on('chat message', function(msg) {
-      const item = document.createElement('li');
-      item.textContent = msg;
-      messages.appendChild(item);
-      window.scrollTo(0, document.body.scrollHeight);
+    function sendMessage() {
+      const input = document.getElementById('message');
+      const msg = input.value;
+      if (msg.trim() !== '') {
+        socket.send(msg);
+        input.value = '';
+      }
+    }
+
+    document.getElementById('message').addEventListener('keypress', function(e) {
+      if (e.key === 'Enter') sendMessage();
     });
   </script>
 </body>
 </html>
+
